- Add prototype prototype-only controller for viewing error pages - Simplify error page styling - Add system-ui to font stack - Borrow font stack from main Parliament site, as well as some off-black tones for copy & heading text - Use flex to prevent footer shifting up on short pages - Use date_dt as a dateLaid_dt fallback for papers

--- a/app/assets/stylesheets/primary.css
+++ b/app/assets/stylesheets/primary.css
@@ -2,26 +2,31 @@
 
 html {
     scroll-behavior: smooth;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, system-ui, sans-serif
 }
 
 body {
     margin: 0;
     background: white;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
     background: white;
     display: block;
     margin: 0 auto;
-    font-family: Helvetica, sans-serif;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
     padding: 16px 24px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
+    color: #4d4d4d;
     word-wrap: break-word;
     line-height: 28px;
+    flex-grow: 1;
 }
 
 .footer-container {
@@ -75,7 +80,6 @@ footer {
             align-items: center;
             display: inline-flex;
             box-sizing: border-box;
-            font-family: Helvetica, sans-serif;
 
             .nav-logo-wrapper {
                 width: 185.92px;
@@ -130,7 +134,6 @@ footer {
     border-radius: 0;
     background: #2B57AB;
     color: white;
-    font-family: Helvetica, sans-serif;
 }
 
 #search-input {
@@ -212,7 +215,7 @@ div.callout {
     box-sizing: border-box;
 
     .about-item {
-        color: #181818;
+        color: #4d4d4d;
     }
 
     .content-text {
@@ -264,7 +267,6 @@ div.callout {
         font-size: 16px;
         line-height: 22.48px;
         text-decoration: none;
-        color: white;
         background: none;
     }
 
@@ -275,7 +277,6 @@ div.callout {
 
     .amendment-title-ref {
         color: #181818;
-        font-family: National-LFSN, sans-serif;
         font-weight: 350;
     }
 
@@ -293,8 +294,8 @@ a {
 }
 
 /* Headings */
-h1, h2, h3 {
-    color: #181818;
+h1, h2, h3, h4, h5, h6 {
+    color: #373151;
     font-weight: 700;
 }
 
